fix overflow

--- a/about.css
+++ b/about.css
@@ -6,7 +6,7 @@ Date Updated: 10/10/2016*/
 body, html {
     height: 100%;
     margin: 0px;
-    overflow-x: visible; 
+    overflow: visible; 
     font-family: 'Droid Sans', sans-serif;
 
 }
